--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
   <script>
     const links = [
-      { name: "My Portfolio", url: "https://yourportfolio.com" },
-      { name: "GitHub", url: "https://github.com/yourusername" },
-      { name: "LinkedIn", url: "https://linkedin.com/in/yourprofile" }
+      { name: "My Itch", url: "https://malachek.itch.io/" },
+      { name: "LinkedIn", url: "https://www.linkedin.com/in/malachykennedy/" },
+      { name: "GitHub", url: "https://github.com/malachek" }
     ];
 
     const container = document.getElementById("links");
